rebase with main

--- a/.github/workflows/actions_build.yml
+++ b/.github/workflows/actions_build.yml
@@ -1,7 +1,7 @@
 name: 'Build and publish to Docker Hub'
 
 env:
-   NAME: "klibio/osgi-starterkit"
+   NAME: "klibio/docker-osgi-starterkit"
 
 on:
   workflow_dispatch:
